force-app/main/default/objects/FundingDisbursement/fields/A_A_Uplift__c.field-meta.xml
<CustomField>
    <fullName>A_A_Uplift__c</fullName>
    <label>A&amp;A Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>