force-app/main/default/objects/FundingDisbursement/fields/Accounting_code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_code__c</fullName>
    <defaultValue>&quot;54112001&quot;</defaultValue>
    <label>Accounting code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>