force-app/main/default/objects/FundingDisbursement/fields/Amount_A_A__c.field-meta.xml
<CustomField>
    <fullName>Amount_A_A__c</fullName>
    <description>Amount of expenditure allocated to A&amp;A</description>
    <label>Amount A&amp;A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>