force-app/main/default/objects/FundingDisbursement/fields/Amount_Capital__c.field-meta.xml
<CustomField>
    <fullName>Amount_Capital__c</fullName>
    <description>Amount of this DIsbursement allocated for capital expenditure</description>
    <label>Amount Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>