force-app/main/default/objects/FundingDisbursement/fields/Amount_Receipted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Receipted__c</fullName>
    <label>Amount Receipted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>