force-app/main/default/objects/FundingDisbursement/fields/Amount_Unrecipeted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Unrecipeted__c</fullName>
    <label>Amount Unreceipted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>