force-app/main/default/objects/FundingDisbursement/fields/Approved_Batch_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Batch_Total_Amount__c</fullName>
    <inlineHelpText>Summarised total of the field &quot;Total Grant Fund Requested&quot; from all child Batches when a Batch is Approved.</inlineHelpText>
    <label>Approved Batch Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>