force-app/main/default/objects/FundingDisbursement/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <formula>FundingAward.Award_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>