force-app/main/default/objects/FundingDisbursement/fields/Award_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Award_Record_Type__c</fullName>
    <formula>FundingAward.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Record Type</label>
    <type>Text</type>
</CustomField>