force-app/main/default/objects/FundingDisbursement/fields/Balance_Carried_Forward__c.field-meta.xml
<CustomField>
    <fullName>Balance_Carried_Forward__c</fullName>
    <description>Balance carried forward from preceding Disbursement (usually because it&apos;s negative)</description>
    <label>Balance Carried Forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>