force-app/main/default/objects/FundingDisbursement/fields/Budget_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Allocation</label>
    <referenceTo>BudgetAllocation</referenceTo>
    <relationshipLabel>Funding Disbursements</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>