force-app/main/default/objects/FundingDisbursement/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>