force-app/main/default/objects/FundingDisbursement/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <defaultValue>&quot;701015&quot;</defaultValue>
    <label>Cost Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>