force-app/main/default/objects/FundingDisbursement/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Decription/Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>