force-app/main/default/objects/FundingDisbursement/fields/Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount__c</fullName>
    <description>Formula Field that represents portion of budget allocated to this Funding Disbursement. Edits must be made using the related Budget Allocation record</description>
    <formula>Budget_Allocation__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field that represents portion of budget allocated to this Funding Disbursement. Edits must be made using the related Budget Allocation record</inlineHelpText>
    <label>Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>