force-app/main/default/objects/FundingDisbursement/fields/Drawdown_Batch_amount__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Batch_amount__c</fullName>
    <label>Drawdown / Batch amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>