force-app/main/default/objects/FundingDisbursement/fields/E_Code__c.field-meta.xml
<CustomField>
    <fullName>E_Code__c</fullName>
    <label>E Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>