force-app/main/default/objects/FundingDisbursement/fields/Funding_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Funding_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adjustment record that the disbursement record has been created to clear</description>
    <label>Funding Adjustment</label>
    <referenceTo>Funding_Adjustment__c</referenceTo>
    <relationshipLabel>Funding Disbursements</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>