force-app/main/default/objects/FundingDisbursement/fields/GDL_Date__c.field-meta.xml
<CustomField>
    <fullName>GDL_Date__c</fullName>
    <label>GDL Date</label>
    <type>Date</type>
</CustomField>