force-app/main/default/objects/FundingDisbursement/fields/GDL_Reference__c.field-meta.xml
<CustomField>
    <fullName>GDL_Reference__c</fullName>
    <label>GDL Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>