force-app/main/default/objects/FundingDisbursement/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <displayFormat>WHLG-{000}</displayFormat>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>