force-app/main/default/objects/FundingDisbursement/fields/Invoice_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Formula__c</fullName>
    <formula>Invoice_Number__c + &quot;_&quot; &amp; 
CASE(TEXT(MONTH( Invoice_Date__c )),
&quot;1&quot;, &quot;january&quot;,
&quot;2&quot;, &quot;february&quot;,
&quot;3&quot;, &quot;march&quot;,
&quot;4&quot;, &quot;april&quot;,
&quot;5&quot;, &quot;may&quot;,
&quot;6&quot;, &quot;june&quot;,
&quot;7&quot;, &quot;july&quot;,
&quot;8&quot;, &quot;august&quot;,
&quot;9&quot;, &quot;september&quot;,
&quot;10&quot;, &quot;october&quot;,
&quot;11&quot;, &quot;november&quot;,
&quot;December&quot;)
&amp; TEXT(DAY( Invoice_Date__c ))</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>