force-app/main/default/objects/FundingDisbursement/fields/Parent_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Parent_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Baseline that this Disbursement is associated with</description>
    <label>Parent Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Funding Disbursements</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>