force-app/main/default/objects/FundingDisbursement/fields/Payment_Direction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Direction__c</fullName>
    <description>Direction of payment travel (inbound = to DESNZ, Outbound = by DESNZ)</description>
    <label>Payment Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>