force-app/main/default/objects/FundingDisbursement/fields/Payment_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period_End__c</fullName>
    <label>Payment Period End</label>
    <type>Date</type>
</CustomField>