force-app/main/default/objects/FundingDisbursement/fields/Payment_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period_Start__c</fullName>
    <label>Payment Period Start</label>
    <type>Date</type>
</CustomField>