force-app/main/default/objects/FundingDisbursement/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>Reference number to be manually entered</description>
    <label>Payment Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>