force-app/main/default/objects/FundingDisbursement/fields/Pending_Batch_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Batch_Total_Amount__c</fullName>
    <label>Pending Batch Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>