force-app/main/default/objects/FundingDisbursement/fields/PO_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>PO Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>