force-app/main/default/objects/FundingDisbursement/fields/Programme_Code__c.field-meta.xml
<CustomField>
    <fullName>Programme_Code__c</fullName>
    <defaultValue>&quot;708726&quot;</defaultValue>
    <label>Programme Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>