force-app/main/default/objects/FundingDisbursement/fields/Requisition__c.field-meta.xml
<CustomField>
    <fullName>Requisition__c</fullName>
    <label>Requisition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>