force-app/main/default/objects/FundingDisbursement/fields/Rolling_Batch_Summary__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Batch_Summary__c</fullName>
    <label>Rolling Batch Summary</label>
    <summarizedField>Batch_Financial_Year_Split__c.Funding_Used_in_Financial_Year__c</summarizedField>
    <summaryForeignKey>Batch_Financial_Year_Split__c.Funding_Disbursement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>