force-app/main/default/objects/FundingDisbursement/fields/Scheduled_Date_MMYYYY__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_MMYYYY__c</fullName>
    <description>Converts the &quot;Scheduled Date&quot; Date/Time field to a Month/Year field, for use in flows.</description>
    <formula>TEXT(MONTH(DATEVALUE(ScheduledDate ))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(ScheduledDate)))</formula>
    <label>Scheduled Date (MM/YYYY)</label>
    <type>Text</type>
</CustomField>