force-app/main/default/objects/FundingDisbursement/fields/Trigger_Flow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used to trigger a Funding Disbursement flow (which will be triggered via separate flows that check this box) that will re-run all the formulas on any child objects and roll-up that data up into fields on this object. The flow will then uncheck this box again to allow for future re-triggering.</description>
    <inlineHelpText>Field is used to trigger a Funding Disbursement flow (which will be triggered via separate flows that check this box) that will re-run all the formulas on any child objects and roll-up that data up into fields on this object. The flow will then uncheck this box again to allow for future re-triggering.</inlineHelpText>
    <label>Trigger Flow</label>
    <type>Checkbox</type>
</CustomField>