force-app/main/default/objects/FundingDisbursement/fields/UKSBS_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>UKSBS_Invoice_Sent__c</fullName>
    <label>UKSBS Invoice Sent</label>
    <type>Date</type>
</CustomField>