force-app/main/default/objects/FundingDisbursement/fields/Upfront_or_Capital_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Upfront_or_Capital_Picklist__c</fullName>
    <label>Upfront or Capital?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>