force-app/main/default/objects/FundingDisbursement/recordTypes/Adjustment_Disbursement.recordType-meta.xml
<RecordType>
    <fullName>Adjustment_Disbursement</fullName>
    <active>true</active>
    <label>Adjustment Disbursement</label>
</RecordType>