force-app/main/default/objects/FundingDisbursement/recordTypes/Standard_Disbursement.recordType-meta.xml
<RecordType>
    <fullName>Standard_Disbursement</fullName>
    <active>true</active>
    <label>Standard Disbursement</label>
</RecordType>