force-app/main/default/objects/FundingDisbursement/recordTypes/Upfront_Disbursement.recordType-meta.xml
<RecordType>
    <fullName>Upfront_Disbursement</fullName>
    <active>true</active>
    <label>Upfront Disbursement</label>
</RecordType>