force-app/main/default/objects/FundingDisbursement/listViews/Last_Month_Funding_Disbursements.listView-meta.xml
<ListView>
    <fullName>Last_Month_Funding_Disbursements</fullName>
    <columns>Name</columns>
    <columns>DisbursementName</columns>
    <columns>ScheduledDate</columns>
    <columns>Submission_Date__c</columns>
    <columns>DisbursementDate</columns>
    <columns>Status</columns>
    <columns>Payment_Reference__c</columns>
    <columns>Drawdown_Batch_amount__c</columns>
    <columns>FundingAward</columns>
    <columns>Approved_Batch_Total_Amount__c</columns>
    <columns>Amount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Period_Start__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>FundingDisbursement.Standard_Disbursement</value>
    </filters>
    <filters>
        <field>FundingAward</field>
        <operation>contains</operation>
        <value>WHLG</value>
    </filters>
    <filters>
        <field>Amount</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Last Month Funding Disbursements - LG</label>
</ListView>