force-app/main/default/objects/FundingDisbursement/listViews/SHF_Disbursements.listView-meta.xml
<ListView>
    <fullName>SHF_Disbursements</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>PO_Number__c</columns>
    <columns>Cost_Centre__c</columns>
    <columns>Programme_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Award_Record_Type__c</field>
        <operation>contains</operation>
        <value>SHF</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>FundingDisbursement.Standard_Disbursement</value>
    </filters>
    <label>SHF Disbursements</label>
</ListView>